Fixed normalize.css overflow problem

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -8,7 +8,7 @@
 }
 
 div, section {
-  overflow: hidden;
+
 }
 
 /* Remove default padding */
@@ -42,8 +42,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
